# base-settings-debug

./: .pre-commit-config.yaml  Makefile  pyproject.toml
base_settings_debug/: debug.py
